fix article-preview link overflow

--- a/src/scss/_components.articles.scss
+++ b/src/scss/_components.articles.scss
@@ -64,6 +64,7 @@
     display: flex;
     margin-bottom: 20px;
     justify-content: center;
+    align-items: flex-start;
 
     .article-preview--layout-left & {
         width: 400px;
